deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-example
  namespace: default
  labels:
    app: go-web-example
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: go-web-example
